--- a/src/main/webapp/product-single.html
+++ b/src/main/webapp/product-single.html
@@ -50,7 +50,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Liquor <span>store</span></a>
+	      <a class="navbar-brand" href="../resources/html/index.html">Liquor <span>store</span></a>
 	      <div class="order-lg-last btn-group">
           <a href="#" class="btn-cart dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           	<span class="flaticon-shopping-bag"></span>
@@ -78,7 +78,7 @@
 				    		<p class="mb-0"><a href="#" class="price">$22.50</a><span class="quantity ml-3">Quantity: 01</span></p>
 				    	</div>
 				    </div>
-				    <a class="dropdown-item text-center btn-link d-block w-100" href="cart.html">
+				    <a class="dropdown-item text-center btn-link d-block w-100" href="../resources/html/cart.html">
 				    	View All
 				    	<span class="ion-ios-arrow-round-forward"></span>
 				    </a>
@@ -91,19 +91,19 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	          <li class="nav-item"><a href="../resources/html/index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="../resources/html/about.html" class="nav-link">About</a></li>
 	          <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="product.html">Products</a>
+              	<a class="dropdown-item" href="../resources/html/product.html">Products</a>
                 <a class="dropdown-item" href="product-single.html">Single Product</a>
-                <a class="dropdown-item" href="cart.html">Cart</a>
-                <a class="dropdown-item" href="checkout.html">Checkout</a>
+                <a class="dropdown-item" href="../resources/html/cart.html">Cart</a>
+                <a class="dropdown-item" href="../resources/html/checkout.html">Checkout</a>
               </div>
             </li>
-	          <li class="nav-item	"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item	"><a href="../resources/html/blog.html" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="../resources/html/contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -115,7 +115,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate mb-5 text-center">
-          	<p class="breadcrumbs mb-0"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span><a href="product.html">Products <i class="fa fa-chevron-right"></i></a></span> <span>Products Single <i class="fa fa-chevron-right"></i></span></p>
+          	<p class="breadcrumbs mb-0"><span class="mr-2"><a href="../resources/html/index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span><a href="../resources/html/product.html">Products <i class="fa fa-chevron-right"></i></a></span> <span>Products Single <i class="fa fa-chevron-right"></i></span></p>
             <h2 class="mb-0 bread">Products Single</h2>
           </div>
         </div>
@@ -169,7 +169,7 @@
 	          		<p style="color: #000;">80 piece available</p>
 	          	</div>
           	</div>
-          	<p><a href="cart.html" class="btn btn-primary py-3 px-5 mr-2">Add to Cart</a><a href="cart.html" class="btn btn-primary py-3 px-5">Buy now</a></p>
+          	<p><a href="../resources/html/cart.html" class="btn btn-primary py-3 px-5 mr-2">Add to Cart</a><a href="../resources/html/cart.html" class="btn btn-primary py-3 px-5">Buy now</a></p>
     			</div>
     		</div>
 
